--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
 **/.DS_Store
 **/.ipynb_checkpoints
-git add.
-git commit -m "I committed the changes to ignore the ipynb_checkpoints and DS store"
-git push
+"I committed the changes to ignore the ipynb_checkpoints and DS store"
